--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 4040",
     "build:css": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --minify",
-    "build": "npm run build:css && next build",
+    "build": "npm run build:css && next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -26,8 +26,8 @@
     "@tailwindcss/cli": "^4.1.4",
     "@tailwindcss/postcss": "^4.1.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "15.3.0",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "^15.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
