--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 4040",
     "build:css": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --minify",
-    "build": "npm run build:css && next build && next export",
+    "build": "npm run build:css && next build",
     "start": "next start",
     "lint": "next lint"
   },
