--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev -p 4040",
     "build:css": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --minify",
-    "build": "npm run build:css && next build",
-    "start": "next start",
+    "build": "npm run build:css && next build && next export",
+    "start": "npx serve out",
     "lint": "next lint"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "serve": "^14.2.4",
     "theme-ui": "^0.17.2"
   },
   "devDependencies": {
