--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4040",
-    "build:css": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --minify",
-    "build": "npm run build:css && next build && next export",
-    "start": "npx serve out",
-    "lint": "next lint"
+    "dev": "next dev",
+    "build": "npm run build:css && next build",
+    "start": "next start",
+    "build:css": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --minify"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.15.0",
@@ -18,14 +17,11 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "serve": "^14.2.4",
     "theme-ui": "^0.17.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
     "@next/bundle-analyzer": "^15.3.0",
-    "@tailwindcss/cli": "^4.1.4",
-    "@tailwindcss/postcss": "^4.1.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.24.0",
     "eslint-config-next": "^15.3.0",
