--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
-  "name": "get-me-a-chai",
+  "name": "jsm_saas_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "npm run build:css && next build",
+    "dev": "next dev --turbopack",
+    "build": "next build",
     "start": "next start",
-    "build:css": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --minify"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.15.0",
-    "@headlessui/react": "^2.2.1",
-    "@heroicons/react": "^2.2.0",
+    "@clerk/nextjs": "^6.20.1",
+    "@headlessui/react": "^2.2.4",
+    "@hookform/resolvers": "^5.0.1",
+    "@jsmastery/utils": "^1.0.2",
     "@material-tailwind/react": "^2.1.10",
-    "next": "^15.3.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "theme-ui": "^0.17.2"
+    "@opentelemetry/core": "^2.0.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@sentry/nextjs": "^9.22.0",
+    "@supabase/supabase-js": "^2.49.8",
+    "@vapi-ai/web": "^2.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.511.0",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.0",
-    "@next/bundle-analyzer": "^15.3.0",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "^15.3.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.8",
+    "tw-animate-css": "^1.3.0",
+    "typescript": "^5"
   }
 }
