--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@sentry/nextjs": "^9.22.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.49.8",
     "@vapi-ai/web": "^2.3.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.1",
@@ -30,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
